# beach-gruppindelning

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
backend/: pom.xml
backend/docs/: m1-notes.md  m3-notes.md  m4-notes.md  m5-notes.md  m6a-notes.md  m6b-notes.md  m7-notes.md  m8-notes.md  v020-notes.md
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: backend.rs  main.rs
desktop/ui/: app.js  index.html
docs/: acceptance-vt27-mvp.md  installation-mac.md  installation-windows.md  plan.md
docs/adr/: 001-timefold-1.33-pin.md  002-spring-boot-3.5.md  003-tauri-jlink-resources.md  004-sqlite-jdbcclient-no-jpa.md  005-frontend-one-major-behind.md  006-solver-model.md  007-determinism.md
docs/design/: 01-architecture.md  02-product-data-ui.md  03-adversarial-review-round1.md  04-solver.md  05-solver-verification.md
frontend/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: field-builder.spec.ts  import-flow.spec.ts  optimize-results.spec.ts  plan-flow.spec.ts  resources-coaches-capacity.spec.ts  saved-plans-export.spec.ts  tutorial-search-schedule.spec.ts  whatif-explain.spec.ts
frontend/e2e/fixtures/: explain-whatif-fixture.csv.txt  field-builder-fixture.csv.txt  import-fixture.csv.txt  optimize-results-fixture.csv.txt  resources-fixture.csv.txt  saved-plans-export-fixture.csv.txt  (+1 more)
frontend/src/: main.tsx  router.tsx
scripts/: build-jre.ps1  build-jre.sh  check-jre-modules.sh  check-no-confidential.sh  jre.env  package.ps1  package.sh  smoke-backend.ps1  smoke-backend.sh
scripts/lib/: jre-module-drift.sh
test-data/generator/: README.md  generate.py
test-data/regression/: expected-scores.json
(+541 files in other folders)
