[package]
name = "gruppindelning-desktop"
version = "0.1.0"
description = "Gruppindelning desktop shell (Tauri v2): spawns and supervises the bundled Java backend."
edition = "2021"
rust-version = "1.77"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.4", features = ["std"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
