[package]
name = "gruppindelning-desktop"
version = "0.3.0"
description = "Gruppindelning desktop shell (Tauri v2): spawns and supervises the bundled Java backend."
edition = "2021"
rust-version = "1.77"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
# File-save path for exports (M8): the frontend's platform.ts uses the dialog
# plugin's save picker + fs writeFile; dialog-picked paths are auto-added to
# the fs scope by Tauri, so fs needs no broad static scope.
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.4", features = ["std"] }
# Strips Windows \\?\ verbatim prefixes from paths. Tauri's resource_dir()/app_data_dir()
# can return verbatim paths; `java -jar \\?\C:\...` reads the manifest but fails class
# loading ("Could not find or load main class ...JarLauncher") — found via the release
# workflow's 2x2 diagnostic matrix.
dunce = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
